# job-seeker

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: profile.example.md
src/job_seeker/: __init__.py
src/job_seeker/application/: __init__.py  orchestrator.py  ports.py
src/job_seeker/domain/: __init__.py  models.py  profile.py  regions.py
src/job_seeker/domain/services/: __init__.py  deduplicator.py  eligibility.py  relevance.py  scorer.py
src/job_seeker/infrastructure/: __init__.py
src/job_seeker/infrastructure/config/: __init__.py  profile_loader.py
src/job_seeker/infrastructure/entrypoints/: __init__.py  cli.py  mcp_server.py  search.py
src/job_seeker/infrastructure/reporting/: __init__.py  csv_reporter.py  html_reporter.py  json_reporter.py
src/job_seeker/infrastructure/sources/: __init__.py  base.py  defaults.py  himalayas.py  registry.py  remoteok.py
tests/: conftest.py  test_architecture.py
tests/application/: test_orchestrator.py  test_ports.py
tests/domain/: test_models.py  test_profile.py  test_regions.py  test_results.py
tests/domain/services/: test_deduplicator.py  test_eligibility.py  test_relevance.py  test_scorer.py
tests/infrastructure/: conftest.py
tests/infrastructure/config/: test_profile_loader.py
tests/infrastructure/entrypoints/: test_cli.py  test_mcp_server.py  test_search.py
tests/infrastructure/reporting/: conftest.py  test_reporters.py
tests/infrastructure/sources/: test_base.py  test_defaults.py  test_himalayas.py  test_registry.py  test_remoteok.py  test_source_contract.py
