[project]
name = "job-seeker"
version = "0.1.0"
description = "Profile-driven, source-agnostic job search engine that ranks openings by fit and eligibility, exposed to local AI agents over MCP."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Alberto Rosas" }]
keywords = ["job-search", "mcp", "agents", "remote-jobs", "ai", "scraper"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
]

dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
# Heavy / flaky mainstream-board scraping. Kept optional so the core stays lean.
jobspy = ["python-jobspy>=1.1.80"]
# The MCP server interface for local agents.
mcp = ["mcp>=1.2"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
job-seeker = "job_seeker.infrastructure.entrypoints.cli:main"
job-seeker-mcp = "job_seeker.infrastructure.entrypoints.mcp_server:main"

[project.urls]
Homepage = "https://github.com/albertorsesc/job-seeker"
Repository = "https://github.com/albertorsesc/job-seeker"
Issues = "https://github.com/albertorsesc/job-seeker/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/job_seeker"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# `tests/` mirrors `src/job_seeker/`, one test module per source module. importlib mode is what
# pytest recommends for new projects and it lets mirrored directories reuse a basename
# (tests/sources/test_base.py and tests/reporting/test_base.py) without __init__.py files.
addopts = "-q --import-mode=importlib --strict-markers --strict-config"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
# tests are checked too: the ports are Protocols, so a fake adapter conforming to one is a
# static claim. With tests excluded, a drifted fake would pass and the ports would prove nothing.
packages = ["job_seeker", "tests"]
strict = true

# Scoped rather than project-wide: a global ignore_missing_imports also silences first-party
# typos, so `from job_seeker.sorces import X` would quietly become Any in a codebase whose
# entire discipline is that imports point one way.
[[tool.mypy.overrides]]
module = ["bs4.*", "dateutil.*", "jobspy.*", "respx.*", "lxml.*", "yaml.*"]
ignore_missing_imports = true
